# libsgd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index_template.html
core/: CMakeLists.txt  appevent.cpp  appevent.h  bitmask.cpp  bitmask.h  condvar.cpp  condvar.h  config.cpp  config.h  expected.h  exports.h  fetch.cpp  fetch.h  fileio.cpp  fileio.h  log.cpp  log.h  object.cpp  object.h  path.cpp  path.h  property.h  random.cpp  random.h  shared.cpp  shared.h  sharedptr.cpp  sharedptr.h  signal.h  signal_impl.inl  std.cpp  std.h  stringutil.cpp  stringutil.h
core/tests/: CMakeLists.txt  core_tests.cpp
dawn/: CMakeLists.txt  copytexture.cpp  copytexture.h  copytexture.wgsl  device.cpp  device.h  device.mm  exports.h  generatemipmaps.cpp  generatemipmaps.h  generatemipmaps.wgsl  hellotriangle.cpp  hellotriangle.h  hellotriangle.wgsl  shadermodule.cpp  shadermodule.h
dawn/tests/: CMakeLists.txt  dawn_tests.cpp  metal_tests.cpp  metal_tests.mm  vsync_test.cpp
geom/: CMakeLists.txt  affinemat4.h  affinemat4.inl  box.h  box.inl  exports.h  line.h  line.inl  mat3.h  mat3.inl  mat4.h  mat4.inl  plane.h  plane.inl  quat.h  quat.inl  rect.h  rect.inl  util.cpp  util.h  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
geom/tests/: CMakeLists.txt  geom_tests.cpp
graphics/: CMakeLists.txt  animation.cpp  animation.h  bindgroup.cpp  bindgroup.h  buffer.cpp  buffer.h  camera.cpp  camera.h  drawlist.cpp  drawlist.h  entity.cpp  entity.h  entityutil.cpp  entityutil.h  exports.h  font.cpp  font.h  gltfloader.cpp  gltfloader.h  graphics.cpp  graphics.h  graphicsutil.cpp  graphicsutil.h  image.cpp  image.h  imageutil.cpp  imageutil.h  light.cpp  light.h  material.cpp  material.h  materialutil.cpp  materialutil.h  mattematerial.cpp  mattematerial.h  mesh.cpp  mesh.h  meshprimitives.cpp  meshprimitives.h  (+48 more)
graphics/core/: bindgroup.cpp  bindgroup.h  buffer.cpp  buffer.h  float16.cpp  float16.h  graphics.cpp  graphics.h  texture.cpp  texture.h  texturedata.cpp  texturedata.h  textureutil.cpp  textureutil.h
graphics/drawlist/: drawlist.cpp  drawlist.h  drawlistrenderer.wgsl  font.cpp  font.h
graphics/image/: image.cpp  image.h  imagebindgroup.cpp  imagebindgroup.h  imagematerial.cpp  imagematerial.h  imagematerial.wgsl  imagerenderer.cpp  imagerenderer.h  imagerenderer.wgsl  imageutil.cpp  imageutil.h
graphics/material/: emissivematerial.cpp  emissivematerial.h  emissivematerial.wgsl  material.cpp  material.h  materialutil.cpp  materialutil.h  nullmaterial.cpp  nullmaterial.wgsl  pbrmaterial.cpp  pbrmaterial.h  pbrmaterial.wgsl  prelitmaterial.cpp  prelitmaterial.h  prelitmaterial.wgsl
graphics/mesh/: mesh.cpp  mesh.h  meshprimitives.cpp  meshrenderer.cpp  meshrenderer.h  meshrenderer.wgsl  meshutil.cpp  meshutil.h  skinnedmeshrenderer.cpp  skinnedmeshrenderer.h  skinnedmeshrenderer.wgsl  surface.cpp  surface.h  vertex.cpp  vertex.h
graphics/plane/: planebindgroup.cpp  planebindgroup.h  planebindings.cpp  planebindings.h  planerenderer.wgsl
graphics/render/: rendercontext.cpp  rendercontext.h  renderop.h  renderpipeline.cpp  renderpipeline.h  renderqueue.cpp  renderqueue.h  scene.wgsl  scenebindgroup.cpp  scenebindgroup.h  scenebindings.cpp  scenebindings.h
graphics/shaders/: drawlistrenderer.wgsl  fontmaterial.wgsl  imagematerial.wgsl  mattematerial.wgsl  meshrenderer.wgsl  nullmaterial.wgsl  pbrmaterial.wgsl  prelitmaterial.wgsl  scene.wgsl  shadowmaterial.wgsl  skinnedmeshrenderer.wgsl  skybox.wgsl  skyboxrenderer.wgsl  spritematerial.wgsl  spriterenderer.wgsl  uniforms.h
graphics/skybox/: skyboxbindgroup.cpp  skyboxbindgroup.h  skyboxbindings.cpp  skyboxbindings.h  skyboxgeometry.cpp  skyboxgeometry.h  skyboxrenderer.wgsl
graphics/terrain/: terrainbindgroup.cpp  terrainbindgroup.h  terrainbindings.cpp  terrainbindings.h  terrainrenderer.wgsl
graphics/tests/: CMakeLists.txt  graphics_tests.cpp  parent_tests.cpp  scene_tests.cpp  scene_tests_mesh.cpp  scene_tests_overlay.cpp  scene_tests_sprites.cpp  start.cpp
libsgd/: CMakeLists.txt  Doxyfile  README.md  VERSIONS.txt  audio.cpp  bbsgd.cpp  beginextern.h  create_bundled_lib.cmake  endextern.h  fixnames.py  graphics.cpp  graphics.h  helloworld.c  imgui.cpp  imguibackend.cpp  internal.cpp  internal.h  libsgd.h  scene.cpp  system.cpp  types.cpp  types.h  window.cpp  window.h
libsgd/blitz3d/: CMakeLists.txt  bbsgd.cpp  blocks.bb  helloworld.bb  keycodes.bb  makesphere.bb  overlay.bb  primitives.bb  sgd.bb  spritegrass.bb
libsgd/blitzmax/: CMakeLists.txt  apigen.py  apigen_bmx.py  helloworld.bmx  sgd2bmx.bmx
libsgd/docs/: CMakeLists.txt  Doxyfile
libsgd/doxygen/: CMakeLists.txt  Doxyfile
libsgd/lua/: CMakeLists.txt  apigen.py  apigen_lua.py  bindgen.py  helloworld.lua
libsgd/nodejs/: CMakeLists.txt  README.md  binding.gyp  binding.gyp.template  helloworld.js  init.sh  package.json  sgd.i
libsgd/python/: CMakeLists.txt  genrenames.py  helloworld.py  libsgd.i  sgd.i
libsgd/tests/: CMakeLists.txt  directionallights.cpp  libsgd_tests.c  libsgd_tests_createmesh.c  libsgd_tests_directionallight.c  spotlight.cpp  (+10 more)
scene/: CMakeLists.txt  animation.h  camera.cpp  camera.h  collider.cpp  collider.h  collisionspace.cpp  collisionspace.h  collisionutil.cpp  collisionutil.h  contact.h  ellipsoidcollider.cpp  ellipsoidcollider.h  entity.cpp  entity.h  entityutil.h  exports.h  gltfloader.cpp  gltfloader.h  light.h  meshcollider.cpp  meshcollider.h  meshcolliderdata.cpp  meshcolliderdata.h  model.cpp  model.h  modelrenderer.cpp  modelrenderer.h  overlay.cpp  overlay.h  scene.cpp  scene.h  skinnedmodelrenderer.cpp  skinnedmodelrenderer.h  skybox.cpp  skybox.h  spherecollider.cpp  spherecollider.h  sprite.cpp  sprite.h  (+2 more)
skirmish/: CMakeLists.txt  actor.cpp  actor.h  bullet.cpp  bullet.h  game.cpp  game.h  ground.cpp  ground.h  main.cpp  player.cpp  player.h  saucer.cpp  saucer.h  std.cpp  std.h  tower.cpp  tower.h  world.cpp  world.h
window/: CMakeLists.txt  exports.h  gamepad.cpp  gamepad.h  keyboard.cpp  keyboard.h  keycodes.cpp  keycodes.h  mouse.cpp  mouse.h  uidevice.cpp  uidevice.h  window.cpp  window.h
(+262 files in other folders)
